# StockControl

./: .gitignore  Dockerfile  README.md  db.json  docker-compose.yml  mamacos.json  pyproject.toml
app/: __init__.py  database.py
app/controllers/: __init__.py  product_controller.py  stock_controller.py
app/models/: __init__.py  product.py  stock.py
app/repositories/: __init__.py  product_repository.py  stock_repository.py
client/: .env  .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
client/src/: Api.ts  App.tsx  api.ts  global.css
client/src/api/: api.ts  http.ts  index.ts
client/src/components/: HistoryList.tsx  ProductsForm.tsx  ProductsList.tsx  ProductsTable.tsx
client/src/contexts/: ProductContext.tsx
client/src/controller/contexts/: ProductContext.tsx  StockContext.tsx
client/src/controller/handlers/: handleRequest.ts
client/src/controller/hooks/: useProduct.tsx  useStock.tsx
client/src/domain/errors/: HttpError.ts
client/src/domain/interfaces/: IProduct.ts  IStock.ts
client/src/domain/models/: Product.ts  Stock.ts
client/src/domain/services/: ProductService.ts  StockService.ts
client/src/hooks/: useProduct.tsx  useStock.tsx
client/src/interfaces/: IProduct.ts
client/src/models/: Product.ts  Stock.ts
client/src/services/: ProductService.ts
client/src/view/components/: BaseProps.ts  utils.ts
client/src/view/product/: ProductsFilter.tsx  ProductsForm.tsx  ProductsTable.tsx  index.tsx
client/src/view/stock/: StocksForm.tsx  StocksTable.tsx  index.tsx
server/: .env  Dockerfile  db.json  pyproject.toml
server/api/: __init__.py  app.py  db.py
server/api/controllers/: __init__.py  product_controller.py  stock_controller.py
server/api/models/: __init__.py  product.py  stock.py
server/api/repositories/: product_repository.py  stock_repository.py
server/api/services/: __init__.py  product_service.py  stock_service.py
server/migrations/: env.py
server/migrations/versions/: 2f548f0e7fc1_first_migration.py  573899852665_stock_table_created.py
(+4 files in other folders)
